--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ configurations.all {
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.firebase:firebase-database:11.6.0'
     compile 'com.android.support:multidex:1.0.2'
 
     compile 'com.android.support:appcompat-v7:26.1.0'
